--- a/Prototipo_iOS_DesMovil/Info.plist
+++ b/Prototipo_iOS_DesMovil/Info.plist
@@ -33,14 +33,17 @@
 	<true/>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array>
-		<string>MKDirectionsModeBus</string>
-		<string>MKDirectionsModeCar</string>
 		<string>MKDirectionsModePedestrian</string>
 	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>¿Permitir que la aplicación utilice su ubicación actual?</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>¿Permitir que la aplicación utilice su ubicación actual?</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
